# burncost

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/burncost/: __init__.py  core.py  development.py  diagnostics.py  onlevel.py  pipeline.py  trending.py  triangle.py
tests/: test_burning_cost_analysis.py  test_development_factors.py  test_diagnostics.py  test_edge_cases.py  test_loss_triangle.py  test_on_level_premium.py  test_smoke.py  test_trend_estimator.py  test_trend_robustness.py
